--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
     <title>Momentum App</title>
 </head>
 <body>
-    <form id="login-form" class="hidden">
-        <input required maxlength="15" type="text" placeholder="What is your name?"/>
-        <button>Lon In</button>
-    </form>
-    <h2 id="clock">00:00:00</h2>
-    <h1 id="greeting" class="hidden"></h1>
-    <form id="todo-form">
-        <input type="text" placeholder="Write a To Do and Press Ender" required />
-    </form>
-    <ul id="todo-list"></ul>
-    <div id="quote">
-        <span></span>
-        </br>
-        <span></span>
-    </div>
-    <div id="weather">
-        <span></span>
-        <span></span>
-    </div>
+    <section class="center">
+        <h2 id="clock">00:00:00</h2>
+        <form id="login-form" class="hidden">
+            <input class="name-input" required maxlength="10" type="text" placeholder="What is your name?"/>
+        </form>
+        <span id="greeting" class="hidden"></span>
+        <form id="todo-form">
+            <input class="todo-input" required type="text" placeholder="Write a To Do"/>
+        </form>
+        <ul id="todo-list"></ul>
+        <div id="quote">
+            <span></span>
+            </br>
+            <span></span>
+        </div>
+        <div id="weather">
+            <span></span><br>
+            <span></span>
+        </div>
+    </section>
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
-    <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
